# PyGram

./: .gitignore  LICENSE  Makefile  mkdocs.yml  pyproject.toml
pygram/: instagram.py  orquestrator.py
pygram/page_objects/: __init__.py  pages_object.py
pygram/pages/: liker.py  login.py
pygram/views/: view.py
