[tool.poetry]
name = "pygram"
version = "0.1.0"
description = "Robô de gerenciamento de página no Instagram"
authors = ["Vitor Senne Lima <vitorsenne9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "<5.0.0"

[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
isort = "^5.12.0"
mkdocs = "^1.4.2"
pip-audit = "^2.4.14"
selenium = "^4.8.2"
pysimplegui = "^4.60.4"
prospector = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
